<resources>
    <string name="app_name">Help-MeIT</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="txt_phoneQ1">What is the make of your device?</string>

    <string name="title">IT Support Service</string>
    <string name="select_textstring">Select which device you need assistance on:</string>
    <string name="phone_textstring">Mobile Phone</string>
    <string name="PC_textstring">Laptop / Desktop</string>
    <string name="console_textstring">Gaming Console</string>

    <string name="phone_description">phone icon</string>
    <string name="PC_description">PC icon</string>
    <string name="console_description">console icon</string>
    <!-- Phone Question Strings-->
    <string name="mobile_phone">Mobile Phone</string>
    <string name="rbtn_google">Google</string>
    <string name="rbtn_samsung">Samsung</string>
    <string name="rbtn_other">Other</string>
    <string name="rbtn_apple">Apple</string>
    <string name="rbtn_hp">HP</string>
    <string name="rbtn_windows">Windows</string>
    <string name="rbtn_mac">Mac</string>
    <string name="rbtn_linux">Linux</string>
    <string name="btn_select">Select</string>
    <string name="txt_tort">"Drinking the Kool-Aid, huh?"</string>
    <string name="txt_samsung">"You must really like bloatware apps eating your memory."</string>
    <string name="txt_other">What are you even doing with that trash? Dismissed.</string>
    <string name="btn_next">Next</string>

    <string name="txt_isItOn">Is it on?</string>
    <string name="btn_yes">YES</string>
    <string name="btn_no">NO</string>
    <string name="txt_no">The power button is your only hope.</string>

    <string name="txt_areYouSure">Are you sure?</string>
    <string name="txt_notSure">Well turn it on then!</string>

    <string name="txt_reset">Have you reset it?</string>
    <string name="txt_offOn">Turn it off and on again!!!</string>

    <string name="txt_inRice">Have you put it in a container of rice?</string>
    <string name="txt_yesRice">Do not cook it. Wait for 24 hours.</string>
    <string name="txt_noRice">Fill a container up with dry rice and leave it in there for at least 24 hours. No cheating on the time.</string>
    <string name="txt_maybeRice">How do you not know?!?</string>
    <string name="btn_maybeRice">"???"</string>

    <string name="txt_isItWorking">Is it working now?</string>
    <string name="txt_isWorking">"You're Welcome! Now go away."</string>
    <string name="txt_notWorking">Go ask Google. Maybe they can help you.</string>
    <string name="btn_menuReturn">Return to Menu</string>

    <string name="rbtn_xbox">Xbox</string>
    <string name="rbtn_playstation">Playstation</string>
    <string name="rbtn_switch">Nintendo Switch</string>
    <string name="btn_nextc1">Next</string>
    <string name="btn_selectc1">Select</string>

    <string name="txt_phoneA1_yes">"Well that's a start."</string>
    <string name="txt_phoneA2_yes">"Kinda hoping you would say that."</string>
    <string name="txt_phoneA3_yes">Well that took long enough, eh?</string>

    <string name="txt_phoneQ4a">Did you drop it?</string>
    <string name="txt_phoneQ4a_yes">That is probably your issue. Electronic internal bleeding.</string>
    <string name="txt_phoneQ4a_no">"That's a relief."</string>

    <string name="txt_phoneQ4b">Was it in the case?</string>
    <string name="txt_phoneQ4b_yes">Finally something positive being reported. Good job human.</string>
    <string name="txt_phoneQ4b_no">Definitely electronic internal bleeding going on. Take it to the nearest repair shop.
    There might not be any hope left.</string>

    <string name="txt_phoneQ4a_2">"...in water?"</string>
    <string name="txt_phoneQ4a_2_yes">You know that water is not good for electronics, right?</string>
    <string name="txt_phoneQ4a_2_no">So you dropped it on the ground. Still not good, but could
    be worse.</string>
    <string name="btn_reset">Reset</string>
    <string name="txt_settings_retort">We knew that you would break it, so we took it away.</string>

    <!-- Console Question strings -->
    <string name="txt_consoleQ1">What is the brand of your gaming console?</string>
    <string name="txt_q1_xbox">PC is better. Consider upgrading yourself.</string>
    <string name="txt_q1_playstation">Your gaming choices are questionable.</string>
    <string name="txt_q1_switch">Oh that’s cute, really?</string>
    <string name="txt_xbox_select">You selected: XBOX</string>
    <string name="txt_ps_select">You selected: PLAYSTATION</string>
    <string name="txt_switch_select">You selected: NINTENDO SWITCH</string>
    <string name="txt_consoleQ2">How old is the system?</string>
    <string name="txt_consoleQ2_1">0-1 year</string>
    <string name="txt_consoleQ2_2">1 year +</string>
    <string name="txt_consoleA1">Still new, okay…</string>
    <string name="txt_consoleA2">That’s ancient!!</string>
    <string name="txt_consoleQ3">Has the device been dropped or is there any water damage?</string>
    <string name="txt_consoleQ3A1">Stop right there. We can’t help you further. You need to replace your console. Go check your insurance.</string>
    <string name="txt_consoleQ3A2">Let’s move on then…</string>
    <string name="txt_consoleQ5">Have you tried to reset your system? </string>
    <string name="txt_consoleQ5A1">That should have done the trick! If it didn’t, let us move on.</string>
    <string name="txt_consoleQ5A2">C’mon! That should have been the first thing you did!</string>
    <string name="txt_consoleQ4A2">It’s surprising you haven’t dropped or damaged that ancient thing.</string>
    <string name="txt_consoleQ6">Is your device functioning yet?</string>
    <string name="txt_consoleQ6A1">Good, thank you for using our service. You can close the app now.</string>
    <string name="txt_consoleQ6A2">Go buy a PC for your games, we obviously can’t help you.</string>
    <string name="txt_consoleQ7">Sounds like your gaming console is very outdated, we suggest you replace it immediately:</string>
    <string name="btn_consoleQ7_1">SURE</string>
    <string name="btn_consoleQ7_2">NO THANKS</string>
    <string name="txt_consoleQ7A1">Thank you for using our support service. Hope you don’t have another issue.</string>
    <string name="txt_consoleQ7A2">We still suggest you stop playing with those weak consoles and purchase a PC.</string>
    <string name="txt_consoleQ8">Have you attempted to reset your system?</string>
    <string name="txt_consoleQ8A1">Hmmm, that should have diagnosed the issue by now. Let’s move on.</string>
    <string name="txt_consoleQ8A2">That should have been the first thing you did. What are you waiting for? Restart it.</string>
    <string name="txt_consoleQ9">Is your issue still ongoing?</string>
    <string name="txt_consoleQ9A1">We’re sorry, we cannot further assist you. We suggest that you have the device physically checked by a technician asap. You may be eligible for a replacement!</string>
    <string name="txt_consoleQ9A2">Great! We appreciate you choosing us as your IT Specialist Support.</string>

    <!-- PC Question strings -->
    <string name="txt_pcQ1">What is the operating system?</string>string>
    <string name="txt_pcQ1_mac">You\'d be more at home using the Pro edition of our app for only $99.</string>
    <string name="txt_pcQ1_linux">You are overqualified to be using this app. Proceed at your discretion.</string>
    <string name="txt_pcQ1_other">What else is there?</string>
    <string name="txt_pcQ1_windows">I\'m going to assume your version was released AFTER the year 2000. Otherwise, you\'re on your own.</string>
    <string name="txt_windows_select">You selected: WINDOWS</string>
    <string name="txt_mac_select">You selected: MAC</string>
    <string name="txt_linux_select">You selected: LINUX</string>
    <string name="txt_other_select">You selected: OTHER</string>
    <string name="txt_pcQ2">Have you tried turning it off and on again?</string>
    <string name="txt_pcQ2_no">What are you waiting for?!</string>
    <string name="txt_pcQ3">Have you recently \"downloaded\" more RAM?</string>
    <string name="txt_pcQ3_yes">You have suffered from an \"internal exception.\" You may want to see your doctor.</string>
    <string name="txt_pcQ4">Is it even plugged in?</string>
    <string name="txt_pcQ4_yes">That\'s all I got</string>
    <string name="txt_pcQ4_no">So plug it in you nitwit!</string>
    <string name="txt_pcQ5_yes">It\'s a miracle! For future reference, one of your grandchildren could have provided the same service.</string>
    <string name="txt_pcQ5_no">The problem is between the chair and the keyboard.</string>
    <string name="txt_pcQ3_no">Well turn it off and on then!</string>

    <string name="admob_app_id">ca-app-pub-1039025163064107~8905441161</string>
    <string name="admob_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
