<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8D5D5"
    tools:context=".PC_Question1">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2_pc"
        android:layout_width="415dp"
        android:layout_height="56dp"
        android:background="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:titleMarginStart="32dp"
        app:titleTextColor="@color/design_default_color_on_secondary" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="126dp"
            android:layout_marginBottom="24dp"
            android:text="@string/txt_pcQ1"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="201dp"
            android:layout_height="138dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="384dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <RadioButton
                android:id="@+id/rbtn_windows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/radioButtonColor"
                android:text="@string/rbtn_windows"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/rbtn_mac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/radioButtonColor"
                android:text="@string/rbtn_mac"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/rbtn_linux"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/radioButtonColor"
                android:text="@string/rbtn_linux"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/rbtn_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/radioButtonColor"
                android:text="@string/rbtn_other"
                android:textSize="24sp" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="136dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="137dp"
            android:background="#2196F3"
            android:text="@string/btn_select"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <TextView
            android:id="@+id/txt_retort_mac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="137dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="138dp"
            android:text="@string/txt_pcQ1_mac"
            android:textColor="#009C65"
            android:textSize="24sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_commit" />

        <TextView
            android:id="@+id/txt_windows_select"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/txt_windows_select"
            android:textAlignment="center"
            android:textColor="#0097A7"
            android:textSize="30sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499" />

        <TextView
            android:id="@+id/txt_mac_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="137dp"
            android:layout_marginEnd="138dp"
            android:text="@string/txt_mac_select"
            android:textAlignment="center"
            android:textColor="#009C65"
            android:textSize="30sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499" />

        <TextView
            android:id="@+id/txt_linux_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="137dp"
            android:layout_marginEnd="138dp"
            android:text="@string/txt_linux_select"
            android:textAlignment="center"
            android:textColor="#750000"
            android:textSize="30sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499" />

        <TextView
            android:id="@+id/txt_other_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="137dp"
            android:layout_marginEnd="138dp"
            android:text="@string/txt_other_select"
            android:textAlignment="center"
            android:textColor="#009C65"
            android:textSize="30sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499" />

        <TextView
            android:id="@+id/txt_retort_linux"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="137dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="138dp"
            android:text="@string/txt_pcQ1_linux"
            android:textColor="#750000"
            android:textSize="24sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_commit" />

        <TextView
            android:id="@+id/txt_retort_windows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="137dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="138dp"
            android:text="@string/txt_pcQ1_windows"
            android:textColor="#0097A7"
            android:textSize="24sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_commit" />

        <TextView
            android:id="@+id/txt_retort_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="137dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="138dp"
            android:text="@string/txt_pcQ1_other"
            android:textColor="#009C65"
            android:textSize="24sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/btn_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_commit" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:background="#2196F3"
            android:text="@string/btn_next"
            android:textColor="#FFFFFF"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_return"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:background="#00695C"
            android:text="@string/btn_menuReturn"
            android:textColor="#FFFFFF"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>